--- a/public/app.css
+++ b/public/app.css
@@ -7,7 +7,11 @@ body{
   background-image: url("/img/back.jpg");
   background-size:cover;
   height:100%;
-  
+  padding-top:50px;
+  padding-bottom: 40px;
+  overflow-x:hidden;
+  overflow-y:hidden;
+
 }
 h1{
   margin:0;
@@ -15,7 +19,7 @@ h1{
 
 #main{
   margin: 0px auto;
-  width:auto;
+  width:100%;
   height:100%;
   overflow: hidden;
 }
@@ -54,7 +58,7 @@ h1{
 
 #msgcontent{
   width:100%;
-  height:446px;
+  height:100vh;
   overflow-x:hidden;
   overflow-y:auto;
   font-size:20px;
@@ -63,8 +67,11 @@ h1{
   background-color:#faf0e6;
   background-size:100% 100%;
   background-repeat:no-repeat;
-  background-position:center;
+  background-position:center center;
   -moz-background-size: cover;
+  padding-bottom: 80px;
+  background-size: cover;
+  background - attachment : fixed ;
 }
 .mySend{
   clear:both;
@@ -137,37 +144,16 @@ li{
 
 
 #inputcontent{
+  position: fixed;
   width:100%;
   height:40px;
   background-color:#fff;
 }
-#content{
-  text-align: center;
-  width:100%;
-  height:auto;
-}
-#left,#center,#right{
-  display:inline-block;
-  height:40px;
-}
-#inputdiv{
-  width:63%;
-  float:left;
-}
-#senddiv{
-  width:20%;
-  float:left;
-  background-color: rgb(0,162,232);
-}
-#uploaddiv{
-  width:17%;
-  float:left;
-  height:40px;
-}
+
 
 #input{
   width:100%;
-  height:35px;
+  height:40px;
   font-weight: bold;
   outline:none;
   resize: none;
@@ -176,13 +162,14 @@ li{
   overflow-y: auto;
 }
 .sidebar{
-  position:absolute;
+  position:fixed;
   top:50px;
   left:-100%;
   width:320px;
   height:auto;
   background-color:#DDDDDD;
   text-align: center;
+  z-index: 9999;
 }
 .people{
   color:black;
@@ -208,7 +195,7 @@ li{
 
 .btn.send{
   width:100%;
-  background-color: transparent;
+  border-radius: 0;
 }
 
 .btn.set{
@@ -238,16 +225,17 @@ li{
   background-color:rgb(0,162,232);
 }
 .btn.signout,.btn.bighead,.btn.paint,.btn.changeBack{
-  width:100%;
+  width:30%;
   border:1px solid lightgray;
 }
 #username{
   text-align: center;
+  margin: 0;
 }
 #bigheadimg{
-  height:215px;
+  height:212px;
   background-image: url("/img/icon.png") ;
-  background-size: 150px 150px;
+  background-size: 100px 100px;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -271,15 +259,15 @@ li{
   outline:none;
   background-color: #a9a9a9;
   border-radius: 0;
+  font-weight:bold;
+  font-size: 20px; 
 }
 .btn.upload:active{
     background-color:rgba(238,68,95,1);
 }
 #uploadimg{
-  width:35px;
   position: relative;
-  bottom:10px;
-
+  bottom:15px;
 }
 
 #upload,#bighead,#changeBack{
@@ -308,7 +296,9 @@ li{
   height:auto;
   max-width:50%;
 }
+.namediv{
 
+}
 
 
 
