--- a/public/app.css
+++ b/public/app.css
@@ -133,6 +133,7 @@ h1{
 p{
   margin:0;
   color:black;
+  clear:both;
 }
 .loginmsg{
   clear:both;
@@ -296,8 +297,23 @@ li{
   height:auto;
   max-width:50%;
 }
-.namediv{
-
+@media screen and (max-width: 767px) {
+  .myImg{
+    float:right;
+    clear:both;
+    max-width:100%;
+    height:auto;
+  }
+  .otherImg{
+    float:left;
+    clear:both;
+    height:auto;
+    max-width:100%;
+  }
+  .sidebar{
+    width:100%;
+    height:100%;
+  }
 }
 
 
