--- a/public/app.css
+++ b/public/app.css
@@ -202,13 +202,11 @@ li{
 .btn.set{
   background: transparent;
   height:50px;
-  font-size: 40px;
+  font-size: 20px;
   float:left;
-  padding:0 0 50px 0;
+  padding:5px 0 0 0;
 }
-.btn.set:active{
-  background-color:rgba(238,68,95,1);
-}
+
 .btn.close{
   background: transparent;
   float:left;
